Fix for secondary nav icon misalignment

--- a/styles/sidebar.scss
+++ b/styles/sidebar.scss
@@ -217,11 +217,6 @@ aside#sidebar > nav.secondary > ul
 	{
 		padding-left: 30px;
 		margin-right: 0px;
-		> a > span.text > .iconify
-		{
-			left: -4px;
-			top: 6px;
-		}
 	}
 }
 aside#sidebar
